Controller logic added to all end point for better structure 2

--- a/src/views/games.ejs
+++ b/src/views/games.ejs
@@ -21,7 +21,7 @@
                       <div class="card bg-dark mb-4 game_card">
                           <a href="/games/{{data[i][0]}}">
   
-                            <img class="card-img-top mx-auto" style="text-align:center;" src="https://static-cdn.jtvnw.net/ttv-boxart/32399_IGDB-285x380.jpg" >
+                            <img class="card-img-top mx-auto s" style="text-align:center;" src="https://static-cdn.jtvnw.net/ttv-boxart/32399_IGDB-285x380.jpg" >
                             
                             <div class="card-body">
                                 <h4 class="card-title longname text-white">{{data[i][1]}}</h4>
